--- a/T08/rebalive_temperatures/v0/ts8power_quantities.cfg
+++ b/T08/rebalive_temperatures/v0/ts8power_quantities.cfg
@@ -1,3 +1,99 @@
+#[REB0_currents]
+#units = mA
+#y00 = R00.Reb0.DigI
+#y01 = R00.Reb0.AnaI
+#y02 = R00.Reb0.ClkHI
+#y03 = R00.Reb0.ClkLI
+#y04 = R00.Reb0.ODI
+#
+#[REB0_voltages]
+#units = volts
+#y00 = R00.Reb0.DigV
+#y01 = R00.Reb0.AnaV
+#y02 = R00.Reb0.ClkHV
+#y03 = R00.Reb0.ClkLV
+#y04 = R00.Reb0.ODV
+#
+[REB0_powering]
+units = mA_and_V
+y00 = R00.Reb0.PClkL
+y01 = R00.Reb0.PClkU
+y02 = R00.Reb0.SClkL
+y03 = R00.Reb0.SClkU
+y04 = R00.Reb0.RGL
+y05 = R00.Reb0.RGU
+y06 = R00.Reb0.OG0V
+y07 = R00.Reb0.OG1V
+y08 = R00.Reb0.OG2V
+y09 = R00.Reb0.RD0V
+y10 = R00.Reb0.RD1V
+y11 = R00.Reb0.RD2V
+y12 = R00.Reb0.GD0V
+y13 = R00.Reb0.GD1V
+y14 = R00.Reb0.GD2V
+y15 = R00.Reb0.OD0V
+y16 = R00.Reb0.OD1V
+y17 = R00.Reb0.OD2V
+y18 = R00.Reb0.ODI
+#
+#[REB0_CCD0_currents]
+#units = mA
+#y00 = R00.Reb0.CCDI000
+#y01 = R00.Reb0.CCDI001
+#y02 = R00.Reb0.CCDI002
+#y03 = R00.Reb0.CCDI003
+#y04 = R00.Reb0.CCDI004
+#y05 = R00.Reb0.CCDI005
+#y06 = R00.Reb0.CCDI006
+#y07 = R00.Reb0.CCDI007
+#y08 = R00.Reb0.CCDI010
+#y09 = R00.Reb0.CCDI011
+#y10 = R00.Reb0.CCDI012
+#y11 = R00.Reb0.CCDI013
+#y12 = R00.Reb0.CCDI014
+#y13 = R00.Reb0.CCDI015
+#y14 = R00.Reb0.CCDI016
+#y15 = R00.Reb0.CCDI017
+#
+#[REB0_CCD1_currents]
+#units = mA
+#y00 = R00.Reb0.CCDI100
+#y01 = R00.Reb0.CCDI101
+#y02 = R00.Reb0.CCDI102
+#y03 = R00.Reb0.CCDI103
+#y04 = R00.Reb0.CCDI104
+#y05 = R00.Reb0.CCDI105
+#y06 = R00.Reb0.CCDI106
+#y07 = R00.Reb0.CCDI107
+#y08 = R00.Reb0.CCDI110
+#y09 = R00.Reb0.CCDI111
+#y10 = R00.Reb0.CCDI112
+#y11 = R00.Reb0.CCDI113
+#y12 = R00.Reb0.CCDI114
+#y13 = R00.Reb0.CCDI115
+#y14 = R00.Reb0.CCDI116
+#y15 = R00.Reb0.CCDI117
+#
+#[REB0_CCD2_currents]
+#units = mA
+#y00 = R00.Reb0.CCDI200
+#y01 = R00.Reb0.CCDI201
+#y02 = R00.Reb0.CCDI202
+#y03 = R00.Reb0.CCDI203
+#y04 = R00.Reb0.CCDI204
+#y05 = R00.Reb0.CCDI205
+#y06 = R00.Reb0.CCDI206
+#y07 = R00.Reb0.CCDI207
+#y08 = R00.Reb0.CCDI210
+#y09 = R00.Reb0.CCDI211
+#y10 = R00.Reb0.CCDI212
+#y11 = R00.Reb0.CCDI213
+#y12 = R00.Reb0.CCDI214
+#y13 = R00.Reb0.CCDI215
+#y14 = R00.Reb0.CCDI216
+#y15 = R00.Reb0.CCDI217
+#
+
 #[REB1_currents]
 #units = mA
 #y00 = R00.Reb1.DigI
@@ -92,4 +188,99 @@ y18 = R00.Reb1.ODI
 #y13 = R00.Reb1.CCDI215
 #y14 = R00.Reb1.CCDI216
 #y15 = R00.Reb1.CCDI217
+#
+#[REB1_currents]
+#units = mA
+#y00 = R00.Reb1.DigI
+#y01 = R00.Reb1.AnaI
+#y02 = R00.Reb1.ClkHI
+#y03 = R00.Reb1.ClkLI
+#y04 = R00.Reb1.ODI
+#
+#[REB1_voltages]
+#units = volts
+#y00 = R00.Reb1.DigV
+#y01 = R00.Reb1.AnaV
+#y02 = R00.Reb1.ClkHV
+#y03 = R00.Reb1.ClkLV
+#y04 = R00.Reb1.ODV
+#
+[REB2_powering]
+units = mA_and_V
+y00 = R00.Reb2.PClkL
+y01 = R00.Reb2.PClkU
+y02 = R00.Reb2.SClkL
+y03 = R00.Reb2.SClkU
+y04 = R00.Reb2.RGL
+y05 = R00.Reb2.RGU
+y06 = R00.Reb2.OG0V
+y07 = R00.Reb2.OG1V
+y08 = R00.Reb2.OG2V
+y09 = R00.Reb2.RD0V
+y10 = R00.Reb2.RD1V
+y11 = R00.Reb2.RD2V
+y12 = R00.Reb2.GD0V
+y13 = R00.Reb2.GD1V
+y14 = R00.Reb2.GD2V
+y15 = R00.Reb2.OD0V
+y16 = R00.Reb2.OD1V
+y17 = R00.Reb2.OD2V
+y18 = R00.Reb2.ODI
+#
+#[REB2_CCD0_currents]
+#units = mA
+#y00 = R00.Reb2.CCDI000
+#y01 = R00.Reb2.CCDI001
+#y02 = R00.Reb2.CCDI002
+#y03 = R00.Reb2.CCDI003
+#y04 = R00.Reb2.CCDI004
+#y05 = R00.Reb2.CCDI005
+#y06 = R00.Reb2.CCDI006
+#y07 = R00.Reb2.CCDI007
+#y08 = R00.Reb2.CCDI010
+#y09 = R00.Reb2.CCDI011
+#y10 = R00.Reb2.CCDI012
+#y11 = R00.Reb2.CCDI013
+#y12 = R00.Reb2.CCDI014
+#y13 = R00.Reb2.CCDI015
+#y14 = R00.Reb2.CCDI016
+#y15 = R00.Reb2.CCDI017
+#
+#[REB2_CCD1_currents]
+#units = mA
+#y00 = R00.Reb2.CCDI100
+#y01 = R00.Reb2.CCDI101
+#y02 = R00.Reb2.CCDI102
+#y03 = R00.Reb2.CCDI103
+#y04 = R00.Reb2.CCDI104
+#y05 = R00.Reb2.CCDI105
+#y06 = R00.Reb2.CCDI106
+#y07 = R00.Reb2.CCDI107
+#y08 = R00.Reb2.CCDI110
+#y09 = R00.Reb2.CCDI111
+#y10 = R00.Reb2.CCDI112
+#y11 = R00.Reb2.CCDI113
+#y12 = R00.Reb2.CCDI114
+#y13 = R00.Reb2.CCDI115
+#y14 = R00.Reb2.CCDI116
+#y15 = R00.Reb2.CCDI117
+#
+#[REB2_CCD2_currents]
+#units = mA
+#y00 = R00.Reb2.CCDI200
+#y01 = R00.Reb2.CCDI201
+#y02 = R00.Reb2.CCDI202
+#y03 = R00.Reb2.CCDI203
+#y04 = R00.Reb2.CCDI204
+#y05 = R00.Reb2.CCDI205
+#y06 = R00.Reb2.CCDI206
+#y07 = R00.Reb2.CCDI207
+#y08 = R00.Reb2.CCDI210
+#y09 = R00.Reb2.CCDI211
+#y10 = R00.Reb2.CCDI212
+#y11 = R00.Reb2.CCDI213
+#y12 = R00.Reb2.CCDI214
+#y13 = R00.Reb2.CCDI215
+#y14 = R00.Reb2.CCDI216
+#y15 = R00.Reb2.CCDI217
 #
